crates/oxc_react_compiler/tests/snapshots/reassign-global-hook-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reassign-global-hook-arg.js
---
let b = 1;
export default function MyApp() {
	const fn = _temp;
	return useFoo(fn);
}
function _temp() {
	b = 2;
}
function useFoo(fn) {}
export const FIXTURE_ENTRYPOINT = {
	fn: MyApp,
	params: []
};
