crates/oxc_react_compiler/tests/snapshots/reassign-global-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reassign-global-return.js
---
let b = 1;
export default function useMyHook() {
	const fn = _temp;
	return fn;
}
function _temp() {
	b = 2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useMyHook,
	params: []
};
