crates/oxc_react_compiler/tests/snapshots/reassignment-separate-scopes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reassignment-separate-scopes.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c) {
	const $ = _c(10);
	let t0;
	let x;
	if ($[0] !== a) {
		x = [];
		if (a) {
			x.push(a);
		}
		t0 = <div>{x}</div>;
		$[0] = a;
		$[1] = t0;
		$[2] = x;
	} else {
		t0 = $[1];
		x = $[2];
	}
	const y = t0;
	bb0: switch (b) {
		case 0: {
			if ($[3] !== b) {
				x = [];
				x.push(b);
				$[3] = b;
				$[4] = x;
			} else {
				x = $[4];
			}
			break bb0;
		}
		default: {
			if ($[5] !== c) {
				x = [];
				x.push(c);
				$[5] = c;
				$[6] = x;
			} else {
				x = $[6];
			}
		}
	}
	let t1;
	if ($[7] !== x || $[8] !== y) {
		t1 = <div>{y}{x}</div>;
		$[7] = x;
		$[8] = y;
		$[9] = t1;
	} else {
		t1 = $[9];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
