crates/oxc_react_compiler/tests/snapshots/reassignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reassignment.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props.p0 || $[1] !== props.p1) {
		let x = [];
		x.push(props.p0);
		const y = x;
		let t1;
		if ($[3] === Symbol.for("react.memo_cache_sentinel")) {
			t1 = [];
			$[3] = t1;
		} else {
			t1 = $[3];
		}
		x = t1;
		y.push(props.p1);
		t0 = <Component x={x} y={y} />;
		$[0] = props.p0;
		$[1] = props.p1;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
